[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/objects/ship.png" type="Texture" id=1]
[ext_resource path="res://entities/RigidPlayer.gd" type="Script" id=2]
[ext_resource path="res://art/objects/ship_color.png" type="Texture" id=3]
[ext_resource path="res://art/objects/NormalMap (1).png" type="Texture" id=4]
[ext_resource path="res://art/objects/ship/turret1.png" type="Texture" id=5]
[ext_resource path="res://entities/ship/FlameParticles.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/bullets/BaseBullet.tscn" type="PackedScene" id=7]

[sub_resource type="PhysicsMaterial" id=2]
rough = true

[node name="RigidPlayer" type="RigidBody2D" groups=["gravity_item", "local_player"]]
collision_layer = 2
collision_mask = 13
input_pickable = true
mass = 2.0
physics_material_override = SubResource( 2 )
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
script = ExtResource( 2 )

[node name="Ship" type="Sprite" parent="."]
light_mask = 4
texture = ExtResource( 1 )
normal_map = ExtResource( 4 )

[node name="Color" type="Sprite" parent="."]
modulate = Color( 0.501404, 0.605469, 0.537176, 1 )
texture = ExtResource( 3 )

[node name="Gun1" type="Sprite" parent="."]
modulate = Color( 0.258824, 0.258824, 0.258824, 1 )
light_mask = 4
position = Vector2( 0, -4 )
texture = ExtResource( 5 )
offset = Vector2( 0, -1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -7, -7, 0, -17, 7, -7, 8, 6, 13, 13, 7, 15, -7, 15, -13, 13, -8, 6 )

[node name="Right" parent="." instance=ExtResource( 6 )]

[node name="Left" parent="." instance=ExtResource( 6 )]
position = Vector2( -7, 16 )

[node name="HealTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="HitBox" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
polygon = PoolVector2Array( -13, 13, -13, 11, -8, 7, -5, -13, -1, -16, 1, -16, 5, -13, 8, 7, 13, 11, 13, 13, 8, 16, 5, 16, 3, 14, -3, 14, -5, 16, -8, 16 )

[node name="BaseBullet" parent="." instance=ExtResource( 7 )]
